--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
