--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=bookFlow
 spring.datasource.url=jdbc:mysql://localhost:3306/bookflow
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
