dodanie mailera - backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,4 +16,12 @@ logging.level.com.bookflow=DEBUG
 #Temporary Login
 spring.security.user.name=admin
 spring.security.user.password=admin
-#f0c0727b-abf9-46f2-aa01-2c3f78ec6d5f
+
+
+#Mailer
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=martynaszy02@gmail.com
+spring.mail.password=oipnumhimhgeexmx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
