--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -98,7 +98,11 @@
             <version>1.5.5.Final</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
